[gd_scene load_steps=4 format=3 uid="uid://bjnryftoyc6c5"]

[ext_resource type="Script" uid="uid://cqswd4h0qp3l1" path="res://Scenes/gamefirst_input_test.gd" id="1_sq48p"]
[ext_resource type="Texture2D" uid="uid://u2aypu51x6mc" path="res://formedras.svg" id="2_apxyd"]
[ext_resource type="Texture2D" uid="uid://dnrdstucjhyd5" path="res://icon.svg" id="3_1npaq"]

[node name="GameFirstInputTest" type="Node2D"]
script = ExtResource("1_sq48p")
FormGlyph = ExtResource("2_apxyd")
DefaultGlyph = ExtResource("3_1npaq")

[node name="colBackground" type="ColorRect" parent="."]
offset_top = 1.0
offset_right = 1920.0
offset_bottom = 1081.0
color = Color(0.113725, 0.690196, 0.576471, 1)

[node name="colPlayfield" type="ColorRect" parent="."]
offset_left = 128.0
offset_top = 128.0
offset_right = 1344.0
offset_bottom = 960.0
color = Color(0.305882, 0.466667, 0.882353, 1)

[node name="colBGTakeP1" type="ColorRect" parent="."]
visible = false
offset_left = 280.0
offset_top = 688.0
offset_right = 440.0
offset_bottom = 848.0
color = Color(0.933333, 0.188235, 0.152941, 1)

[node name="colBGTakeP2" type="ColorRect" parent="."]
visible = false
offset_left = 280.0
offset_top = 240.0
offset_right = 440.0
offset_bottom = 400.0
color = Color(0.933333, 0.188235, 0.152941, 1)

[node name="colBGAimP1" type="ColorRect" parent="."]
visible = false
offset_left = 544.0
offset_top = 688.0
offset_right = 704.0
offset_bottom = 848.0
color = Color(0.933333, 0.188235, 0.152941, 1)

[node name="colBGAimP2" type="ColorRect" parent="."]
visible = false
offset_left = 544.0
offset_top = 240.0
offset_right = 704.0
offset_bottom = 400.0
color = Color(0.933333, 0.188235, 0.152941, 1)

[node name="colBGFireP1" type="ColorRect" parent="."]
visible = false
offset_left = 768.0
offset_top = 688.0
offset_right = 928.0
offset_bottom = 848.0
color = Color(0.933333, 0.188235, 0.152941, 1)

[node name="colBGFireP2" type="ColorRect" parent="."]
visible = false
offset_left = 768.0
offset_top = 240.0
offset_right = 928.0
offset_bottom = 400.0
color = Color(0.933333, 0.188235, 0.152941, 1)

[node name="colBGLoadP1" type="ColorRect" parent="."]
visible = false
offset_left = 1040.0
offset_top = 688.0
offset_right = 1200.0
offset_bottom = 848.0
color = Color(0.933333, 0.188235, 0.152941, 1)

[node name="colBGLoadP2" type="ColorRect" parent="."]
visible = false
offset_left = 1040.0
offset_top = 240.0
offset_right = 1200.0
offset_bottom = 400.0
color = Color(0.933333, 0.188235, 0.152941, 1)

[node name="imgGlyphPause" type="TextureRect" parent="."]
offset_left = 1688.0
offset_top = 512.0
offset_right = 1816.0
offset_bottom = 640.0
pivot_offset = Vector2(64, 64)
size_flags_horizontal = 4
texture = ExtResource("3_1npaq")
expand_mode = 1
stretch_mode = 5

[node name="imgGlyphTakeP1" type="TextureRect" parent="."]
offset_left = 296.0
offset_top = 704.0
offset_right = 424.0
offset_bottom = 832.0
pivot_offset = Vector2(64, 64)
size_flags_horizontal = 4
texture = ExtResource("3_1npaq")
expand_mode = 1
stretch_mode = 5

[node name="imgGlyphTakeP2" type="TextureRect" parent="."]
offset_left = 296.0
offset_top = 256.0
offset_right = 424.0
offset_bottom = 384.0
pivot_offset = Vector2(64, 64)
size_flags_horizontal = 4
texture = ExtResource("3_1npaq")
expand_mode = 1
stretch_mode = 5

[node name="imgGlyphLoadP1" type="TextureRect" parent="."]
offset_left = 1056.0
offset_top = 704.0
offset_right = 1184.0
offset_bottom = 832.0
pivot_offset = Vector2(64, 64)
size_flags_horizontal = 4
texture = ExtResource("3_1npaq")
expand_mode = 1
stretch_mode = 5

[node name="imgGlyphLoadP2" type="TextureRect" parent="."]
offset_left = 1056.0
offset_top = 256.0
offset_right = 1184.0
offset_bottom = 384.0
pivot_offset = Vector2(64, 64)
size_flags_horizontal = 4
texture = ExtResource("3_1npaq")
expand_mode = 1
stretch_mode = 5

[node name="imgGlyphAimP1" type="TextureRect" parent="."]
offset_left = 560.0
offset_top = 704.0
offset_right = 688.0
offset_bottom = 832.0
pivot_offset = Vector2(64, 64)
size_flags_horizontal = 4
texture = ExtResource("3_1npaq")
expand_mode = 1
stretch_mode = 5

[node name="imgGlyphAimP2" type="TextureRect" parent="."]
offset_left = 560.0
offset_top = 256.0
offset_right = 688.0
offset_bottom = 384.0
pivot_offset = Vector2(64, 64)
size_flags_horizontal = 4
texture = ExtResource("3_1npaq")
expand_mode = 1
stretch_mode = 5

[node name="imgGlyphFireP1" type="TextureRect" parent="."]
offset_left = 784.0
offset_top = 704.0
offset_right = 912.0
offset_bottom = 832.0
pivot_offset = Vector2(64, 64)
size_flags_horizontal = 4
texture = ExtResource("3_1npaq")
expand_mode = 1
stretch_mode = 5

[node name="imgGlyphFireP2" type="TextureRect" parent="."]
offset_left = 784.0
offset_top = 256.0
offset_right = 912.0
offset_bottom = 384.0
pivot_offset = Vector2(64, 64)
size_flags_horizontal = 4
texture = ExtResource("3_1npaq")
expand_mode = 1
stretch_mode = 5

[node name="lblPause" type="Label" parent="."]
offset_left = 1368.0
offset_top = 512.0
offset_right = 1688.0
offset_bottom = 640.0
theme_override_font_sizes/font_size = 44
text = "Pause: Return to Main Menu"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="lblPlayer1" type="Label" parent="."]
offset_left = 576.0
offset_top = 577.0
offset_right = 896.0
offset_bottom = 641.0
theme_override_font_sizes/font_size = 44
text = "Player 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="lblPlayer2" type="Label" parent="."]
offset_left = 576.0
offset_top = 448.0
offset_right = 896.0
offset_bottom = 512.0
theme_override_font_sizes/font_size = 44
text = "Player 2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="lblTakeP1" type="Label" parent="."]
offset_left = 192.0
offset_top = 864.0
offset_right = 512.0
offset_bottom = 928.0
theme_override_font_sizes/font_size = 44
text = "Take Pellets"
horizontal_alignment = 1
vertical_alignment = 1

[node name="lblTakeP2" type="Label" parent="."]
offset_left = 192.0
offset_top = 160.0
offset_right = 512.0
offset_bottom = 224.0
theme_override_font_sizes/font_size = 44
text = "Take Pellets"
horizontal_alignment = 1
vertical_alignment = 1

[node name="lblLoadP1" type="Label" parent="."]
offset_left = 960.0
offset_top = 864.0
offset_right = 1280.0
offset_bottom = 928.0
theme_override_font_sizes/font_size = 44
text = "Load Pellets"
horizontal_alignment = 1
vertical_alignment = 1

[node name="lblLoadP2" type="Label" parent="."]
offset_left = 960.0
offset_top = 160.0
offset_right = 1280.0
offset_bottom = 224.0
theme_override_font_sizes/font_size = 44
text = "Load Pellets"
horizontal_alignment = 1
vertical_alignment = 1

[node name="lblAimP1" type="Label" parent="."]
offset_left = 512.0
offset_top = 864.0
offset_right = 736.0
offset_bottom = 928.0
theme_override_font_sizes/font_size = 44
text = "Aim"
horizontal_alignment = 1
vertical_alignment = 1

[node name="lblFireP1" type="Label" parent="."]
offset_left = 736.0
offset_top = 864.0
offset_right = 960.0
offset_bottom = 928.0
theme_override_font_sizes/font_size = 44
text = "Fire"
horizontal_alignment = 1
vertical_alignment = 1

[node name="lblAimP2" type="Label" parent="."]
offset_left = 512.0
offset_top = 160.0
offset_right = 736.0
offset_bottom = 224.0
theme_override_font_sizes/font_size = 44
text = "Aim"
horizontal_alignment = 1
vertical_alignment = 1

[node name="lblFireP2" type="Label" parent="."]
offset_left = 736.0
offset_top = 160.0
offset_right = 960.0
offset_bottom = 224.0
theme_override_font_sizes/font_size = 44
text = "Fire"
horizontal_alignment = 1
vertical_alignment = 1
